Fix invisible topbanners on wallpapers.

--- a/scss/modules/_ads.scss
+++ b/scss/modules/_ads.scss
@@ -10,6 +10,7 @@ $adMarkerSize: 1rem;
 .banner-ad {
     clear: both;
     width:100%;
+    position:relative;
     text-align: center;
     margin-bottom:$verticalBase;
 
